Creadas las entidades Categoria y Producto con sus relaciones

--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -8,6 +8,8 @@
             "entities": {
                 "main": "Entités",
                 "ciudad": "Ciudad",
+                "categoria": "Categoria",
+                "producto": "Producto",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
