Creadas las entidades Anuncio y Opinión.

--- a/src/main/webapp/i18n/ca/global.json
+++ b/src/main/webapp/i18n/ca/global.json
@@ -9,6 +9,8 @@
                 "main": "Entitats",
                 "categoria": "Categoria",
                 "producto": "Producto",
+                "anuncio": "Anuncio",
+                "opinion": "Opinion",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
