--- a/src/main/webapp/i18n/es/user.management.json
+++ b/src/main/webapp/i18n/es/user.management.json
@@ -21,6 +21,7 @@
         "activated": "Activado",
         "deactivated": "Desactivado",
         "profiles": "Perfiles",
+        "ciudad": "Ciudad",
         "langKey": "Idioma",
         "createdBy": "Creado por",
         "createdDate": "Fecha de creación",
