--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -10,6 +10,8 @@
                 "ciudad": "Ciudad",
                 "categoria": "Categoria",
                 "producto": "Producto",
+                "anuncio": "Anuncio",
+                "opinion": "Opinion",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
