--- a/src/main/webapp/i18n/en/user.management.json
+++ b/src/main/webapp/i18n/en/user.management.json
@@ -21,6 +21,7 @@
         "activated": "Activated",
         "deactivated": "Deactivated",
         "profiles": "Profiles",
+        "ciudad": "City",
         "langKey": "Language",
         "createdBy": "Created by",
         "createdDate": "Created date",
