Registro con Nombre y Apellido, traduccion incluida

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -40,13 +40,17 @@
         },
         "form": {
             "username": "Username",
-            "username.placeholder": "Your username",
+            "username.placeholder": "Username",
             "newpassword": "New password",
             "newpassword.placeholder": "New password",
             "confirmpassword": "New password confirmation",
             "confirmpassword.placeholder": "Confirm the new password",
             "email": "E-mail",
-            "email.placeholder": "Your e-mail"
+            "email.placeholder": "E-mail",
+            "firstName": "First Name",
+            "firstName.placeholder": "First name",
+            "lastName": "Last Name",
+            "lastName.placeholder": "Last Name"
         },
         "messages": {
             "info": {
