Incluido Login en la página de inicio, eliminados los bubbles

--- a/src/main/webapp/i18n/ca/login.json
+++ b/src/main/webapp/i18n/ca/login.json
@@ -1,5 +1,6 @@
 {
     "login": {
+        "welcome": "Benvingut a Plumbeer!",
         "title": "Autenticació",
         "form": {
             "password": "Contrasenya",
