--- a/src/main/webapp/i18n/en/login.json
+++ b/src/main/webapp/i18n/en/login.json
@@ -1,5 +1,6 @@
 {
     "login": {
+        "welcome": "Welcome to Plumbeer!",
         "title": "Sign in",
         "form": {
             "password": "Password",
