--- a/src/main/webapp/i18n/es/login.json
+++ b/src/main/webapp/i18n/es/login.json
@@ -1,5 +1,6 @@
 {
     "login": {
+        "welcome": "Bienvenido a Plumbeer!",
         "title": "Iniciar la sesión",
         "form": {
             "password": "Contraseña",
