--- a/src/main/webapp/i18n/fr/login.json
+++ b/src/main/webapp/i18n/fr/login.json
@@ -1,5 +1,6 @@
 {
     "login": {
+        "welcome":"Bienvenue à Plumbeer!",
         "title": "Authentification",
         "form": {
             "password": "Mot de passe",
