Páginal Login mejorada (falta redireccionar a indexTrue)

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -50,7 +50,8 @@
             "firstName": "First Name",
             "firstName.placeholder": "First name",
             "lastName": "Last Name",
-            "lastName.placeholder": "Last Name"
+            "lastName.placeholder": "Last Name",
+            "ciudad": "City"
         },
         "messages": {
             "info": {
