--- a/src/main/webapp/i18n/ca/global.json
+++ b/src/main/webapp/i18n/ca/global.json
@@ -11,6 +11,7 @@
                 "producto": "Producto",
                 "anuncio": "Anuncio",
                 "opinion": "Opinion",
+                "votacion": "Votacion",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
