--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -15,6 +15,7 @@
                 "votacion": "Votacion",
                 "post": "Post",
                 "voto_post": "Voto_post",
+                "mensaje": "Mensaje",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
